// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the YoastButton executes callback 1`] = `
<button
  className="sc-bwzfXH dQfeoL sc-bdVaJa exAxcS"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the YoastButton executes callback 2`] = `
<button
  className="sc-bwzfXH dQfeoL sc-bdVaJa exAxcS"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the YoastButton matches the snapshot 1`] = `
<button
  className="sc-bwzfXH dQfeoL sc-bdVaJa dNRIPk"
  type="button"
>
  ButtonValue
</button>
`;
